Fix missing space between notice and tabs
[MAILPOET-3073]

--- a/assets/css/src/components/_tabs.scss
+++ b/assets/css/src/components/_tabs.scss
@@ -8,7 +8,9 @@
   }
 
   .notice ~ &,
+  .notice ~ div > &,
   .error ~ &,
+  .error ~ div > &,
   .mailpoet-subscribers-in-plan ~ & {
     top: 0 !important;
   }
